# nutrifit-ai

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  run.sh
backend/: pyproject.toml
backend/src/: config.py  main.py  pipeline.py
backend/src/agents/: data_consolidator.py  expert_advisor.py  nutrition_researcher.py  training_analyst.py  voice_intake.py
backend/src/models/: advisor.py  api.py  consolidated.py  intake.py  nutrition.py  training.py
backend/src/utils/: logging.py
backend/tests/: test_e2e.py
docs/: AI_INTERVIEW_BRIEF.md  ARCHITECTURE.md  CODEBASE_OVERVIEW.md  GUIDE.md  README.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AdvisorCards.tsx  CalorieBalance.tsx  MacroChart.tsx  NutritionTable.tsx  ProgressIndicator.tsx  QualityGauge.tsx  TrainingTable.tsx  VoiceRecorder.tsx
frontend/src/hooks/: useAnalysis.ts  useSpeechRecognition.ts
frontend/src/pages/: Home.tsx  Profile.tsx  Results.tsx
